# Z7

./: .gitignore  readme.md
BlazeServer/: CMakeLists.txt  bytevault.go  editorial.go  go.mod  index.js  live.go  main.go  package-lock.json  package.json  qos.go  readme.txt  redirector.go
BlazeServer/certs/: server.crt  server.key
BlazeServer/certs/bfn/: server.crt
BlazeServer/data/: MPProfile.json  MPProfile_clean.json  bytevault.json  data.json  inventory.json  items.json  packs.json  stat_aggregation.json
BlazeServer/data/live/: challenge_state.json  communitychallenge.json  dailyquests.json  leaderboard_state.json
BlazeServer/include/: server.hpp
BlazeServer/include/blaze/: packet.hpp  tdf.hpp  types.hpp
BlazeServer/include/components/: authentication.hpp  game_manager.hpp  packs.hpp  pvz_gw.hpp  redirector.hpp  user_sessions.hpp  util.hpp
BlazeServer/include/network/: client_connection.hpp
BlazeServer/include/utils/: logger.hpp
BlazeServer/servers/QoS/: server.js
BlazeServer/servers/blazeServer/: CMakeLists.txt
BlazeServer/servers/bytevault/: server.js
BlazeServer/servers/editorial/: server.js
BlazeServer/servers/redirector/: server.js
BlazeServer/src/: main.cpp  server.cpp
BlazeServer/src/blaze/: component.cpp  packet.cpp  tdf.cpp
BlazeServer/src/components/: authentication.cpp  game_manager.cpp  packs.cpp  pvz_gw.cpp  redirector.cpp  user_sessions.cpp  util.cpp
BlazeServer/src/network/: client_connection.cpp  qos_server.cpp  ssl_server.cpp
BlazeServer/src/utils/: config.cpp  logger.cpp
BlazeServer/utils/: appdir.js  log.js
BlazeServer/vps/: index.js  package.json
Launcher/: components.json  package-lock.json  package.json  svelte.config.js  vite.config.js
Launcher/src-tauri/: 2  Cargo.toml  tauri.conf.json
Launcher/src-tauri/capabilities/: default.json
Launcher/src-tauri/src/: lib.rs
Launcher/src/lib/: data.js  paths.js  state.js
Launcher/src/routes/: +layout.svelte  +page.svelte  layout.css  theme.css
MasterServer/: CMakeLists.txt  build.sh  readme.txt  start.sh
MasterServer/data/: MPProfile.json  MPProfile.json.original  data.json  inventory.json
MasterServer/include/: config.hpp  server.hpp
MasterServer/include/blaze/: packet.hpp  types.hpp
MasterServer/include/components/: game_manager.hpp  game_reporting.hpp  pvz_gw.hpp  stats.hpp  user_sessions.hpp  util.hpp
MasterServer/include/data/: inventory.hpp  licenses.hpp  loot.hpp  packs.hpp  player_profile.hpp
MasterServer/include/network/: client_connection.hpp  qos_udp_server.hpp  ssl_server.hpp
MasterServer/include/utils/: config.hpp  editorial.hpp  http.hpp  json.hpp  logger.hpp  server_time.hpp
MasterServer/src/: config.cpp  main.cpp  server.cpp
MasterServer/src/blaze/: component.cpp  tdf.cpp
MasterServer/src/components/: authentication.cpp  game_manager.cpp  game_reporting.cpp  inventory.cpp  packs.cpp  pvz_gw.cpp  stats.cpp  user_sessions.cpp  util.cpp
MasterServer/src/data/: inventory.cpp  loot.cpp  player_profile.cpp
MasterServer/src/network/: client_connection.cpp  qos_udp_server.cpp
Redirector/: CMakeLists.txt  readme.md
Redirector/certs/: server.crt
Redirector/src/: main.cpp  utils.cpp  utils.hpp
Research/: blazeFrame.txt  componentTables.txt  packetFlow.txt  readme.md
Research/Blaze15SDK/: Blaze15Router.cs  readme.txt
Research/Blaze15SDK/Blaze/: ExternalSessionRecentPlayersSettings.cs
Research/Blaze15SDK/Components/: AuthenticationComponentBase.cs  AuthenticationComponentBase.json  GameManagerComponentBase.cs  MailComponentBase.cs  MailComponentBase.json
Research/data/: readme.txt
Research/data/AssociationLists/: Blaze::AssociationLists::GetMemberHashRequest.txt
Research/data/Authentication/: Blaze::Authentication::LogoutRequest.txt
Research/data/Editorial/: dimecfg.xml  game.xml
Research/data/GameManager/: Blaze::GameManager::AdvanceGameStateRequest.txt  Blaze::GameManager::AdvanceGameStateResponse.txt  Blaze::GameManager::CreateGameRequest.txt  Blaze::GameManager::FinalizeGameCreationRequest.txt  Blaze::GameManager::GetGameDataByUserResponse.txt  Blaze::GameManager::UpdateMeshConnectionRequest.txt  Blaze::GameManager::UpdateMeshConnectionResponse.txt  notif Blaze::GameManager::NotifyGameSetup.txt
Research/data/PvzGw/: Blaze::PvzGw::CheckUserMessagesResponse.txt  Blaze::PvzGw::ForceClientNotificationRequest.txt  Blaze::PvzGw::ForceClientNotificationResponse.txt  Blaze::PvzGw::GetClientSettingsResponse.txt  Blaze::PvzGw::GetCommunityAchievementsRequest.txt  Blaze::PvzGw::GetCommunityAchievementsResponse.txt  Blaze::PvzGw::GetDailyQuestsResponse.txt  Blaze::PvzGw::GetPlaylistsResponse.txt  Blaze::PvzGw::GetStoreItemListRequest.txt  Blaze::PvzGw::GetUserMessagesResponse.txt
Research/data/Stats/: Blaze::Stats::GetStatGroupRequest.txt  Blaze::Stats::GetStatsByGroupAsyncRequest.txt  Blaze::Stats::GetStatsByGroupAsyncResponse.txt  notif Blaze::Stats::GetStatsAsyncNotification.txt
Research/data/Unknown/: Blaze::Comp0x001C::Cmd0x0002Request.txt  Blaze::Comp0x001C::Cmd0x0002Response.txt  Blaze::Comp0x001C::Notif0x0072 2.txt  Blaze::Comp0x0804::Cmd0x000DRequest 3.txt  Blaze::Comp0x0804::Cmd0x000DRequest.txt  Blaze::Comp0x0804::Cmd0x000DResponse 2.txt  Blaze::Comp0x0804::Cmd0x000DResponse 3.txt  Blaze::Comp0x0804::Cmd0x000DResponse.txt  Blaze::UnknownComp0803::Cmd0x0001Response.txt
Research/data/UserSessions/: Blaze::UserSessions::UpdateHardwareFlagsRequest.txt  Blaze::UserSessions::UpdateNetworkInfoRequest 3.txt  Blaze::UserSessions::UpdateNetworkInfoResponse 3.txt  Blaze::UserSessions::UserSessionExtendedDataUpdate 2.txt  Blaze::UserSessions::UserSessionExtendedDataUpdate.txt  notif Blaze::UserSessions::UserSessionExtendedDataUpdate 2.txt  notif Blaze::UserSessions::UserSessionExtendedDataUpdate 4.txt  notif Blaze::UserSessions::UserSessionExtendedDataUpdate.txt  notif Blaze::UserSessions::UserUnauthenticated.txt
Research/data/Util/: Blaze::Util::ClientState 2.txt  Blaze::Util::ClientStateResponse.txt  Blaze::Util::FetchClientConfigRequest IdentityParams.txt  Blaze::Util::FetchConfigResponse EDITORIAL.txt  (+6 more)
(+218 files in other folders)
